--- a/src/main/resources/assets/endplus/lang/en_us.json
+++ b/src/main/resources/assets/endplus/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-	"item.tutorial.test": "Test Item",
-	"biome.endplus.end_decay": "End Decay"
+	"item.endplus.ender_brute_spawn_egg": "Enderman Brute Spawn Egg",
+	"biome.endplus.end_decay": "End Decay",
+	"entity.endplus.enderman_brute" : "Enderman Brute"
 }
